Fix responsive on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -859,6 +859,10 @@ img.flag {
 }
 
 @media (max-width: 992px) {
+    .teaser-text h2 {
+        font-size: 42px;
+    }
+    
     .desktop-menu.show {
         display: none !important;
     }
@@ -1072,7 +1076,8 @@ img.flag {
 
     #quick-donation .submit-container .btn {
         width: 90%;
-        margin: auto;
+        margin: auto !important;
+        margin-top: 10px !important;
     }
 
     .small-purple-title {
